Only show swipe hint first 3 starts

--- a/app/res/layout/fragment_home_main.xml
+++ b/app/res/layout/fragment_home_main.xml
@@ -41,7 +41,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/home_audio_note"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textColor="#6D6E71" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -90,7 +92,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/home_share"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#6D6E71" />
+
         </LinearLayout>
     </LinearLayout>
 
