--- a/app/res/layout/audio_note_info_view.xml
+++ b/app/res/layout/audio_note_info_view.xml
@@ -10,6 +10,7 @@
     android:orientation="vertical" >
 
     <ImageView
+        android:id="@+id/ivIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_context_audio_note" />
