--- a/app/res/layout/adapter_home_photo.xml
+++ b/app/res/layout/adapter_home_photo.xml
@@ -1,4 +1,5 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/org.witness.iwitness"
     android:id="@+id/flPhotoRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -7,7 +8,9 @@
         android:id="@+id/ivPhoto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp" />
+        android:padding="20dp"
+        app:rounding_radius="9dp"
+         />
 
     <ImageView
         android:id="@+id/ivVideoSymbol"
