--- a/app/res/drawable/extras_is_new_background.xml
+++ b/app/res/drawable/extras_is_new_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@drawable/white" />
-    <stroke android:color="@drawable/blue" android:width="1dip"/>
+    <corners android:radius="6dp" />
+    <stroke android:color="#4AAEE2" android:width="3dp"/>
 </shape>
