--- a/app/res/menu/activity_home_gallery.xml
+++ b/app/res/menu/activity_home_gallery.xml
@@ -1,3 +1,4 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menu_filter" android:title="@string/menu_select" android:icon="@drawable/ic_gallery_select" android:orderInCategory="99" android:showAsAction="always" android:enabled="true" android:actionLayout="@layout/action_gallery_filter"/>
     <item android:id="@+id/menu_select" android:title="@string/menu_select" android:icon="@drawable/ic_gallery_select" android:orderInCategory="100" android:showAsAction="always" android:enabled="true"/>
 </menu>
