icons, layouts and colors changed for default InformaCam branding

--- a/app/res/layout/fragment_forms_overview.xml
+++ b/app/res/layout/fragment_forms_overview.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="right|center_vertical"
-            android:text="Shared 3 days ago with IBA" />
+            android:text="Shared 3 days ago" />
     </LinearLayout>
 
     <RelativeLayout
