--- a/app/res/layout/activity_main.xml
+++ b/app/res/layout/activity_main.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#231f20"
+    android:background="@drawable/app_primary"
     android:paddingLeft="0dip"
     android:paddingRight="0dip"
     android:paddingTop="0dip" >
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"
         android:src="@drawable/splash"
         />
