--- a/app/res/layout/adapter_gallery_grid.xml
+++ b/app/res/layout/adapter_gallery_grid.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <org.witness.iwitness.app.views.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/org.witness.iwitness"
+    xmlns:app="http://schemas.android.com/apk/res/org.witness.informa.app"
     android:id="@+id/gallery_thumb_holder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
