--- a/app/res/values/styles_wizard.xml
+++ b/app/res/values/styles_wizard.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources
-    xmlns:app="http://schemas.android.com/apk/res/org.witness.iwitness"
+    xmlns:app="http://schemas.android.com/apk/res/org.witness.informa.app"
     >
 <style name="WizardTheme" parent="Theme.Sherlock.Light.NoActionBar">
 	<item name="actionBarStyle">@style/EditorActionBar</item>
