--- a/app/res/xml/preferences.xml
+++ b/app/res/xml/preferences.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-         <ListPreference
-            android:title="@string/prefs_lock_screen"
-            android:defaultValue="1"
-            android:key="lockScreenMode"
-            android:entries="@array/lockScreenOptions_"
-            android:entryValues="@array/lockScreenOptions" />
+<!--          <ListPreference -->
+<!--             android:title="@string/prefs_lock_screen" -->
+<!--             android:defaultValue="1" -->
+<!--             android:key="lockScreenMode" -->
+<!--             android:entries="@array/lockScreenOptions_" -->
+<!--             android:entryValues="@array/lockScreenOptions" /> -->
     
         <ListPreference
             android:defaultValue="0"
