--- a/app/res/values/styles.xml
+++ b/app/res/values/styles.xml
@@ -170,4 +170,12 @@
         <item name="android:textColor">@android:color/white</item>
 	    <item name="android:textSize">15sp</item>
     </style>
+    
+	<style name="Theme.Transparent" parent="android:Theme">
+	    <item name="android:windowIsTranslucent">true</item>
+	    <item name="android:windowBackground">@android:color/transparent</item>
+ 	    <item name="android:windowContentOverlay">@null</item>
+ 	    <item name="android:windowNoTitle">true</item>
+ 	    <item name="android:backgroundDimEnabled">false</item>
+	</style>
 </resources>
