Delayed loading of gallery data
And async fetching of image information (tagging, audio etc)

--- a/app/res/layout/fragment_gallery.xml
+++ b/app/res/layout/fragment_gallery.xml
@@ -69,4 +69,10 @@
         android:verticalSpacing="6dip"
         android:visibility="visible" />
 
+    <ProgressBar
+        android:id="@+id/progressWait"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
